--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         M'BY Technologies est spécialisée dans la création de solutions numériques modernes et performantes...
       </p>
       <p class="text-gray-600 leading-relaxed mb-6">
-        Avec une équipe jeune et ambitieux, nous accompagnons nos partenaires...
+        Avec une équipe jeune et passionnée, nous accompagnons nos partenaires...
       </p>
       <a href="#services" class="bg-green-500 hover:bg-green-600 text-white px-6 py-3 rounded shadow">
         Découvrir nos services
@@ -234,4 +234,5 @@
 <script src="scritp.js"></script>
 </body>
 </html>
+
 
