--- a/index.html
+++ b/index.html
@@ -207,10 +207,10 @@
       <div>
         <h4 class="text-lg font-semibold text-white mb-3">Liens rapides</h4>
         <ul class="space-y-2">
-          <li><a href="#" class="hover:text-white transition">Accueil</a></li>
-          <li><a href="#" class="hover:text-white transition">Services</a></li>
-          <li><a href="#" class="hover:text-white transition">À propos</a></li>
-          <li><a href="#" class="hover:text-white transition">Contact</a></li>
+          <li><a href="#home" class="hover:text-white transition">Accueil</a></li>
+          <li><a href="#services" class="hover:text-white transition">Services</a></li>
+          <li><a href="#about" class="hover:text-white transition">À propos</a></li>
+          <li><a href="#contact" class="hover:text-white transition">Contact</a></li>
         </ul>
       </div>
   
@@ -247,4 +247,5 @@
 <script src="scritp.js"></script>
 </body>
 </html>
+
 
